@@ -2,6 +2,10 @@ Interface:sv_if_ported  File:verilog/v_sv_mod.v
   Port:clk  Dir:in  DataT:  Array:
   Net:clk  O  DeclT:port  NetT:wire  DataT:  Array:
 Interface:v_sv_intf  File:verilog/v_sv_intf.v
+  Cell:subintf  is-a:v_sv_intf2
+            Interface:v_sv_intf2  File:verilog/v_sv_intf.v
+    Pin:*  Net:*
+Interface:v_sv_intf2  File:verilog/v_sv_intf.v
 Module:v_sv_mod  Kwd:module  File:verilog/v_sv_mod.v
   Port:clk  Dir:in  DataT:  Array:
   Net:clk  IO  DeclT:port  NetT:  DataT:  Array:
